--- a/pom.xml
+++ b/pom.xml
@@ -8,12 +8,23 @@
     <artifactId>My-java</artifactId>
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+    <properties>
+        <version.maven-compiler-plugin>3.8.1</version.maven-compiler-plugin>
+    </properties>
+
+    <modules>
+        <module>consistent-hashing</module>
+        <module>leetcode</module>
+        <module>common</module>
+    </modules>
+
 
     <build>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
+                <version>${version.maven-compiler-plugin}</version>
                 <configuration>
                     <source>8</source>
                     <target>8</target>
@@ -21,11 +32,5 @@
             </plugin>
         </plugins>
     </build>
-
-    <modules>
-        <module>consistent-hashing</module>
-        <module>leetcode</module>
-    </modules>
-
 
 </project>
